--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: 'Default'
 
 variables:
   imageName: 'mywebapp'
@@ -14,18 +14,18 @@ steps:
     command: 'buildAndPush'
     repository: '$(imageName)'
     dockerfile: '**/Dockerfile'
-    containerRegistry: 'MyACRConnection'
+    containerRegistry: 'MyACRConnection'  # service connection
     tags: |
       latest
 
 - task: SSH@0
   displayName: 'Deploy to Azure VM'
   inputs:
-    sshEndpoint: 'MyVMConnection'
+    sshEndpoint: 'VMConnection'
     runOptions: 'inline'
     inline: |
-      sudo docker login myacr123.azurecr.io -u <ACR_USERNAME> -p <ACR_PASSWORD>
-      sudo docker pull myacr123.azurecr.io/$(imageName):latest
+      echo "$(ACR_PASSWORD)" | sudo docker login tcontainerregistry.azurecr.io -u "$(ACR_USERNAME)" --password-stdin
+      sudo docker pull tcontainerregistry.azurecr.io/$(imageName):latest
       sudo docker stop webapp || true
       sudo docker rm webapp || true
-      sudo docker run -d -p 80:80 --name webapp myacr123.azurecr.io/$(imageName):latest
+      sudo docker run -d -p 80:80 --name webapp tcontainerregistry.azurecr.io/$(imageName):latest
